--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,12 @@
 <mat-toolbar class="flex">
   <h1>AirShop</h1>
-  <button *ngIf="sesionIniciada==true" (click)="logOut()" mat-button>log out</button>
+  <div *ngIf="sesionIniciada == true; then iniciada else noIniciada"></div>
+  <ng-template #iniciada>
+      <button  (click)="logOut()" mat-button>log out</button>
+  </ng-template>
+
+  <ng-template #noIniciada>
+      <button  routerLink="/profile" mat-button>perfil</button>
+  </ng-template>
+  
 </mat-toolbar>
