--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,9 +2,10 @@
   <h1>AirShop</h1>
   <div *ngIf="sesionIniciada == true; then iniciada else noIniciada"></div>
   <ng-template #iniciada>
-      <button  (click)="logOut()" mat-button>Log out</button>
-      <button  routerLink="/profile" mat-button>Perfil</button>
-      <button  routerLink="/confirm" mat-button>Carrito</button>
+    <button  routerLink="/catalogo" mat-button>Catálogo</button>
+    <button  routerLink="/profile" mat-button>Perfil</button>
+    <button  routerLink="/confirm" mat-button>Carrito</button>
+    <button  (click)="logOut()" routerLink="/login" mat-button>Log out</button>
   </ng-template>
 
   <ng-template #noIniciada>
